--- a/src/inversiongbm/frmInversionGBM.form
+++ b/src/inversiongbm/frmInversionGBM.form
@@ -62,7 +62,8 @@
                           <Group type="102" attributes="0">
                               <Component id="jLabel6" min="-2" pref="48" max="-2" attributes="0"/>
                               <EmptySpace min="-2" pref="5" max="-2" attributes="0"/>
-                              <Component id="txtInteres" min="-2" pref="49" max="-2" attributes="0"/>
+                              <Component id="txtInteres" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                           </Group>
                           <Group type="102" attributes="0">
                               <Component id="lblCantidad" max="32767" attributes="0"/>
@@ -110,7 +111,7 @@
                   <Component id="txtInteres" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jLabel6" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="26" max="32767" attributes="0"/>
+              <EmptySpace pref="27" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="lblCantidad" alignment="3" min="-2" pref="42" max="-2" attributes="0"/>
                   <Component id="cmdSalir" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
@@ -149,7 +150,7 @@
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Segoe UI" size="24" style="1"/>
+          <Font name="Segoe UI" size="22" style="1"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Cantidad a Invertir $"/>
       </Properties>
@@ -223,7 +224,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="txtInteres">
       <Properties>
-        <Property name="text" type="java.lang.String" value="0.85"/>
+        <Property name="text" type="java.lang.String" value="0.875"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtInteresActionPerformed"/>
