--- a/src/inversiongbm/frmInversionGBM.form
+++ b/src/inversiongbm/frmInversionGBM.form
@@ -62,7 +62,9 @@
                           <Group type="102" attributes="0">
                               <Component id="jLabel6" min="-2" pref="48" max="-2" attributes="0"/>
                               <EmptySpace min="-2" pref="5" max="-2" attributes="0"/>
-                              <Component id="txtInteres" min="-2" max="-2" attributes="0"/>
+                              <Component id="txtInteres" min="-2" pref="81" max="-2" attributes="0"/>
+                              <EmptySpace type="separate" max="-2" attributes="0"/>
+                              <Component id="cmdCambiarInteres" min="-2" max="-2" attributes="0"/>
                               <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                           </Group>
                           <Group type="102" attributes="0">
@@ -110,8 +112,9 @@
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="txtInteres" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jLabel6" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="cmdCambiarInteres" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="27" max="32767" attributes="0"/>
+              <EmptySpace pref="26" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="lblCantidad" alignment="3" min="-2" pref="42" max="-2" attributes="0"/>
                   <Component id="cmdSalir" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
@@ -223,9 +226,6 @@
       </AccessibilityProperties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtInteres">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="0.825"/>
-      </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtInteresActionPerformed"/>
         <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtInteresKeyTyped"/>
@@ -235,6 +235,14 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Interes"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="cmdCambiarInteres">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Cambiar"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cmdCambiarInteresActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
