--- a/src/inversiongbm/DB.form
+++ b/src/inversiongbm/DB.form
@@ -86,6 +86,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Windows"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cmdWindowsActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
